--- a/index.html
+++ b/index.html
@@ -390,6 +390,106 @@
         </div>
       </div>
     </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+              <!-- Answer -->
+              <p>
+                The tuition fee is N500,000 (previously N1,000,000). You can pay
+                in two installments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
