--- a/index.html
+++ b/index.html
@@ -27,6 +27,149 @@
               aria-controls="section-1"
             >
               <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
+      <!-- ACCORDION 1 -->
+      <div class="accordion" id="sections">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading-1">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#section-1"
+              aria-expanded="true"
+              aria-controls="section-1"
+            >
+              <!-- Question Title -->
               What is this program all about?
             </button>
           </h2>
@@ -390,106 +533,7 @@
         </div>
       </div>
     </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-              <!-- Answer -->
-              <p>
-                The tuition fee is N500,000 (previously N1,000,000). You can pay
-                in two installments
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
